# api-wilayah-indonesia-rust

./: .dockerignore  Cargo.toml  Dockerfile  README.md  insomnia_wilayah_indonesia.json
.devcontainer/: Dockerfile  devcontainer.json
data/: query_get_all.sql  schema.sql
src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs
